abl RS-1 Update

--- a/EDBMods/Parts/SmallRockets/PlatformBaro.cfg
+++ b/EDBMods/Parts/SmallRockets/PlatformBaro.cfg
@@ -24,12 +24,13 @@ PART
 	mass = 0.0003
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.3
-	angularDrag = 2
+	minimum_drag = 0.2
+	angularDrag = 1
 	crashTolerance = 6
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000 // = 2900
+	PhysicsSignificance = 1
 	bulkheadProfiles = size1, srf
 	tags = cubesat cube atmospher experiment pressure research rerun re-run reus re-us redo re-do reset re-set science sensor
 	
