--- a/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
@@ -11,6 +11,12 @@
 	
 	@scale = 1.0
 	
+	%MODULE[TweakScale]
+    {
+        type = stack_square
+        defaultScale = 1.25
+    }
+	
 }
 
 @PART[EDB-Engine-2]:FOR[RealismOverhaul]
@@ -237,6 +243,350 @@
         energy = 1
         speed = 1.2
     }
+}
+
+@PART[EDB-ablRS1-E2]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ablRS1-E2
+		scale = 0.9,0.9,0.9
+	}
+	
+	@scale = 0.9
+	
+	@mass = 0.08
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 53.8
+		@maxThrust = 53.8
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Kerosene
+			@ratio = 0.338
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.662
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 328.0
+			@key,1 = 1 294.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = RS-1-E-2
+		CONFIG
+		{
+			name = RS-1-E-2
+			minThrust = 53.8
+			maxThrust = 53.8
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = Kerosene
+				ratio = 0.338
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.662
+			}
+			atmosphereCurve
+			{
+				key = 0 328.0
+				key = 1 294.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-ablRS1-E2]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Kerolox-Lower 
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Kerolox-Lower 
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.2
+        fixedScale = 1
+        energy = 1
+        speed = 1.2
+    }
+}
+
+@PART[EDB-ablRS1-E2V]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ablRS1-E2V
+		scale = 0.9,0.9,0.9
+	}
+	
+	@scale = 0.9
+	
+	@mass = 0.11
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 57.8
+		@maxThrust = 57.8
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Kerosene
+			@ratio = 0.338
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.662
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 356.0
+			@key,1 = 1 100.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = RS-1-E-2V
+		CONFIG
+		{
+			name = RS-1-E-2V
+			minThrust = 57.8
+			maxThrust = 57.8
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = Kerosene
+				ratio = 0.338
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.662
+			}
+			atmosphereCurve
+			{
+				key = 0 356.0
+				key = 1 100.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-ablRS1-E2V]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Kerolox-Lower 
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Kerolox-Lower 
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.2
+        fixedScale = 1
+        energy = 1
+        speed = 1.2
+    }
+}
+
+@PART[EDB-ablRS1-Fairing]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ablRS1-Fairing
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-ablRS1-Interstage]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ablRS1-Interstage
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-ablRS1-Lower]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ablRS1-Lower
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.895
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 26200.0
+		type = Default
+		basemass = -1
+		TANK
+		{
+			name = Kerosene
+			amount = 8855.5
+			maxAmount = 8855.5
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 17344.5
+			maxAmount = 17344.5
+		}
+	}
+	
+}
+
+@PART[EDB-ablRS1-Upper]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ablRS1-Upper
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.164
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 4799.0
+		type = Default
+		basemass = -1
+		TANK
+		{
+			name = Kerosene
+			amount = 1622.0
+			maxAmount = 1622.0
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 3177.0
+			maxAmount = 3177.0
+		}
+	}
+	
 }
 
 @PART[EDB-Rocket-1FA]:FOR[RealismOverhaul]
@@ -1854,4 +2204,265 @@
         energy = 1
         speed = 1.0
     }
+}
+
+@PART[EDB-DC-XBody]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/DC-XBody
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	!RESOURCE[LiquidFuel]{}
+	!RESOURCE[Oxidizer]{}
+	!RESOURCE[MonoPropellant]{}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 28545.0
+		type = ServiceModule
+		basemass = -1
+		TANK
+		{
+			name = ElectricCharge
+			amount = 1000.0
+			maxAmount = 1000.0
+		}
+		TANK
+		{
+			name = LqdHydrogen
+			amount = 21270.0
+			maxAmount = 21270.0
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 7265.0
+			maxAmount = 7265.0
+		}
+	}
+	
+}
+
+@PART[EDB-DC-XFlap]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/DC-XFlap
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-DC-XNose]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/DC-XNose
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
++PART[EDB-AtlasVRL10]
+{
+	@name = EDB-DC-XRL10
+	
+	@title = RL-10A-5 for the DC-X
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/AtlasV/RL-10
+		scale = 0.78, 0.78, 0.78
+	}
+	
+	@scale = 0.78
+	
+	@mass = 0.143
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 19.4
+		@maxThrust = 64.7
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = LqdHydrogen
+			@ratio = 0.7454
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.2546
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 373.0
+			@key,1 = 1 343.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 10
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+
+	}
+	
+	!MODULE[ModuleEngineConfigs]{}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = RL-10A-5
+		CONFIG
+		{
+			name = RL-10A-5
+			minThrust = 19.4
+			maxThrust = 64.7
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = LqdHydrogen
+				ratio = 0.7454
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.2546
+			}
+			atmosphereCurve
+			{
+				key = 0 373.0
+				key = 1 343.0
+			}
+		}
+	}
+}
+
+@PART[EDB-DC-XRL10]:FOR[RealPlume]:NEEDS[SmokeScreen]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Hydrolox-Upper
+		!fxOffset = DELETE
+
+	}
+	
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Hydrolox-Upper
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.0
+        fixedScale = 1
+        energy = 1
+        speed = 2
+    }
+}
+
+@PART[EDB-Photon-I]:NEEDS[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Photon-I
+		scale = 1, 1, 1
+	}
+	@scale = 1.0
+	@rescaleFactor = 1.0
+	
+	@mass = 0.04
+	
+	!RESOURCE[MonoPropellant]{}
+	!RESOURCE[LiquidFuel]{}
+	!RESOURCE[Oxidizer]{}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		basemass = -1
+		volume = 210.0
+		type = ServiceModule
+		
+		TANK
+		{
+			name = ElectricCharge
+			amount = 10000.0
+			maxAmount = 10000.0
+		}
+		TANK
+		{
+			name = MMH
+			amount = 99.8
+			maxAmount = 99.8
+		}
+		TANK
+		{
+			name = MON3
+			amount = 100.2
+			maxAmount = 100.2
+		}
+	}
+	
+	!MODULE[ModuleRCSFX]{}
+	
+	
+	MODULE
+	{
+		name = ModuleRCSFX
+		thrusterTransformName = RCSthruster
+		thrusterPower = 0.044
+
+		PROPELLANT
+		{
+			name = MMH
+			ratio = 0.499
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = MON3
+			ratio = 0.501
+		}
+		atmosphereCurve
+		{
+			key = 0 312
+			key = 1 82
+		}
+	}
+	
+
+	
 }
