--- a/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
@@ -627,3 +627,253 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
+KSP_MODEL_SHADER
+{
+	name = EDB-DC-XBody
+	model = EDBMods/Parts/SmallRockets/DC-XBody
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-DC-XFlap
+	model = EDBMods/Parts/SmallRockets/DC-XFlap
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.4   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.4  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-DC-XNose
+	model = EDBMods/Parts/SmallRockets/DC-XNose
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Photon-I
+	model = EDBMods/Parts/SmallRockets/Photon-I
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.6  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ablRS1-E2
+	model = EDBMods/Parts/SmallRockets/ablRS1-E2
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.6  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ablRS1-E2V
+	model = EDBMods/Parts/SmallRockets/ablRS1-E2V
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.6  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ablRS1-Fairing
+	model = EDBMods/Parts/SmallRockets/ablRS1-Fairing
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.3   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.7  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ablRS1-Interstage
+	model = EDBMods/Parts/SmallRockets/ablRS1-Interstage
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.3   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.7  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ablRS1-Lower
+	model = EDBMods/Parts/SmallRockets/ablRS1-Lower
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.3   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.7  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ablRS1-Upper
+	model = EDBMods/Parts/SmallRockets/ablRS1-Upper
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.3  // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.7  // 1>less blurry 0>more blurry
+		}
+	}
+}
