--- a/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
@@ -2466,3 +2466,353 @@
 
 	
 }
+
+
+
+@PART[EDB-Terran1FS]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Terran1FS
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 3.656 //2.256 
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 66000.0
+		type = Default
+		basemass = -1
+		TANK
+		{
+			name = LqdMethane
+			amount = 29152.2
+			maxAmount = 29152.2
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 36847.8
+			maxAmount = 36847.8
+		}
+	}
+	
+}
+
+@PART[EDB-Terran1Second]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Terran1Second
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.701 // 0.471 
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 13800.0
+		type = Default
+		basemass = -1
+
+		TANK
+		{
+			name = LqdMethane
+			amount = 6095.46
+			maxAmount = 6095.46
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 7704.54
+			maxAmount = 7704.54
+		}
+	}
+	
+}
+
+@PART[EDB-Aeon1]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Aeon1
+		scale = 1.0,1.0,1.0
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.26
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 123.3
+		@maxThrust = 123.3
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = LqdMethane
+			@ratio = 0.4417
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.5583
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 335.0
+			@key,1 = 1 280.5
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = Aeon
+		CONFIG
+		{
+			name = Aeon
+			minThrust = 123.3
+			maxThrust = 123.3
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = LqdMethane
+				ratio = 0.4417
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.5583
+			}
+			atmosphereCurve
+			{
+				key = 0 335.0
+				key = 1 280.5
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-Aeon1]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Methalox_Lower
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Methalox_Lower
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.1
+        fixedScale = 1
+        energy = 1
+        speed = 1.0
+    }
+}
+
+@PART[EDB-AeonVac]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/AeonVac
+		scale = 1.0,1.0,1.0
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.4
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 125.88
+		@maxThrust = 125.88
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = LqdMethane
+			@ratio = 0.4417
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.5583
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 355.0
+			@key,1 = 1 100.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 2
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = AeonVac
+		CONFIG
+		{
+			name = AeonVac
+			minThrust = 125.88
+			maxThrust = 125.88
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = LqdMethane
+				ratio = 0.4417
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.5583
+			}
+			atmosphereCurve
+			{
+				key = 0 355.0
+				key = 1 100.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-AeonVac]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Methalox_Upper
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Methalox_Upper
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.2
+        fixedScale = 1
+        energy = 1
+        speed = 1.0
+    }
+}
+
+@PART[EDB-Terran1Fairing]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Terran1Fairing
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.35
+}
+
+@PART[EDB-Terran1Interstage]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Terran1Interstage
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.48
+	
+}
