--- a/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
@@ -877,3 +877,153 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Aeon1
+	model = EDBMods/Parts/SmallRockets/Aeon1
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.7  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-AeonVac
+	model = EDBMods/Parts/SmallRockets/AeonVac
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.7  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Terran1Fairing
+	model = EDBMods/Parts/SmallRockets/Terran1Fairing
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.5 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Terran1FS
+	model = EDBMods/Parts/SmallRockets/Terran1FS
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.5 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Terran1Interstage
+	model = EDBMods/Parts/SmallRockets/Terran1Interstage
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.5 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Terran1Second
+	model = EDBMods/Parts/SmallRockets/Terran1Second
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.5 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
