Astra Rocket 3 Added

--- a/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
@@ -2816,3 +2816,378 @@
 	@mass = 0.48
 	
 }
+
+@PART[EDB-AstraFirst]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/AstraFirst
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.7
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	!RESOURCE[ElectricCharge]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 9560.0
+		type = ServiceModule
+		basemass = -1
+		TANK
+		{
+			name = Kerosene
+			amount = 3214.5
+			maxAmount = 3214.5
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 6295.8
+			maxAmount = 6295.8
+		}
+		TANK
+		{
+			name = ElectricCharge
+			amount = 47551.5
+			maxAmount = 47551.5
+		}
+	}
+	
+}
+
+@PART[EDB-AstraSecond]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/AstraSecond
+		scale = 1.0,1.0,1.0
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.035 
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	!RESOURCE[ElectricCharge]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 312.0
+		type = ServiceModule
+		basemass = -1
+
+		TANK
+		{
+			name = Kerosene
+			amount = 105.1
+			maxAmount = 105.1
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 205.8
+			maxAmount = 205.8
+		}
+		TANK
+		{
+			name = ElectricCharge
+			amount = 1000.0
+			maxAmount = 1000.0
+		}
+	}
+	
+}
+
+@PART[EDB-Aether]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Aether
+		scale = 1.0,1.0,1.0
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.01
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 3.2917
+		@maxThrust = 3.2917
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Kerosene
+			@ratio = 0.338
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.662
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 342.0
+			@key,1 = 1 10.0
+		}
+		%ullage = False
+		%pressureFed = True
+		%ignitions = 10
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 4
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = Aether
+		CONFIG
+		{
+			name = Aeon
+			minThrust = 3.2917
+			maxThrust = 3.2917
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = Kerosene
+				ratio = 0.338
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.662
+			}
+			atmosphereCurve
+			{
+				key = 0 342.0
+				key = 1 10.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-Aether]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Kerolox-Upper
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Kerolox-Upper
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.0
+        fixedScale = 0.5
+        energy = 0.8
+        speed = 1.0
+    }
+}
+
+@PART[EDB-Delphin]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/Delphin
+		scale = 1.0,1.0,1.0
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.06
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 31.8
+		@maxThrust = 31.8
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Kerosene
+			@ratio = 0.338
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.662
+		}
+		@PROPELLANT[ElectricCharge]
+		{
+			@ratio = 5.0
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 312.0
+			@key,1 = 1 280.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 5
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = Delphin
+		CONFIG
+		{
+			name = Delphin
+			minThrust = 31.8
+			maxThrust = 31.8
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = Kerosene
+				ratio = 0.338
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.662
+			}
+			PROPELLANT
+			{
+				name = ElectricCharge
+				ratio = 5.0
+			}
+			atmosphereCurve
+			{
+				key = 0 312.0
+				key = 1 280.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-Delphin]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Kerolox-Lower 
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Kerolox-Lower 
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.0
+        fixedScale = 1
+        energy = 1
+        speed = 1.0
+    }
+}
+
+@PART[EDB-AstraFairing]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/AstraFairing
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.05
+}
+
+@PART[EDB-AstraInter]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/AstraInter
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.12
+	
+}
