--- a/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
@@ -1027,3 +1027,153 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Aether
+	model = EDBMods/Parts/SmallRockets/Aether
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.6  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-Delphin
+	model = EDBMods/Parts/SmallRockets/Delphin
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.6  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-AstraFairing
+	model = EDBMods/Parts/SmallRockets/AstraFairing
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-AstraFirst
+	model = EDBMods/Parts/SmallRockets/AstraFirst
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-AstraInter
+	model = EDBMods/Parts/SmallRockets/AstraInter
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-AstraSecond
+	model = EDBMods/Parts/SmallRockets/AstraSecond
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.2,1.2,1.2   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.6 // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.5  // 1>less blurry 0>more blurry
+		}
+	}
+}
