Added Firefly Alpha

--- a/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
@@ -3191,3 +3191,347 @@
 	@mass = 0.12
 	
 }
+
+@PART[EDB-ReaverI]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/ReaverI
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.25
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 184.0
+		@maxThrust = 184.0
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Kerosene
+			@ratio = 0.338
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.662
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 295.6
+			@key,1 = 1 278.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = ReaverI
+		CONFIG
+		{
+			name = ReaverI
+			minThrust = 184.0
+			maxThrust = 184.0
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = Kerosene
+				ratio = 0.338
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.662
+			}
+			atmosphereCurve
+			{
+				key = 0 295.6
+				key = 1 278.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-ReaverI]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Kerolox-Lower 
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Kerolox-Lower 
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.2
+        fixedScale = 1
+        energy = 1
+        speed = 1.2
+    }
+}
+
+@PART[EDB-LightningI]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/LightningI
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.15
+	
+	@MODULE[ModuleEngines*]
+	{
+		@minThrust = 70.0
+		@maxThrust = 70.0
+		@heatProduction = 100
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = Kerosene
+			@ratio = 0.338
+		}
+		@PROPELLANT[Oxidizer]
+		{
+			@name = LqdOxygen
+			@ratio = 0.662
+		}
+		@atmosphereCurve
+		{
+			@key,0 = 0 322.0
+			@key,1 = 1 100.0
+		}
+		%ullage = True
+		%pressureFed = False
+		%ignitions = 1
+		!IGNITOR_RESOURCE,* {}
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 0.5
+		}
+	}
+	
+	
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 6
+		%useGimbalResponseSpeed = true
+		%gimbalResponseSpeed = 16
+	}
+	
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		modded = false
+		configuration = LightningI
+		CONFIG
+		{
+			name = LightningI
+			minThrust = 70.0
+			maxThrust = 70.0
+			heatProduction = 160
+			PROPELLANT
+			{
+				name = Kerosene
+				ratio = 0.338
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = LqdOxygen
+				ratio = 0.662
+			}
+			atmosphereCurve
+			{
+				key = 0 322.0
+				key = 1 100.0
+			}
+		}
+	}
+
+	
+}
+
+@PART[EDB-LightningI]:FOR[RealPlume]:NEEDS[SmokeScreen,RealFuels]
+{
+    @MODULE[ModuleEngines*]
+	{
+		@name = ModuleEnginesRF
+		%powerEffectName = Kerolox-Lower 
+		!fxOffset = DELETE
+
+	}
+	@MODULE[ModuleEngineConfigs]
+	{
+		%type = ModuleEnginesRF
+	}
+    PLUME
+    {
+        name = Kerolox-Lower 
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,0.2
+        fixedScale = 1
+        energy = 1
+        speed = 1.2
+    }
+}
+
+@PART[EDB-FireflyAlphaFairing]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/FireflyAlphaFairing
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-FireflyAlphaInter]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/FireflyAlphaInter
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+}
+
+@PART[EDB-FireflyAlphaFS]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/FireflyAlphaFS
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 1.715
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 40572.0
+		type = Default
+		basemass = -1
+		TANK
+		{
+			name = Kerosene
+			amount = 13713.34
+			maxAmount = 13713.34
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 26858.66
+			maxAmount = 26858.66
+		}
+	}
+	
+}
+
+@PART[EDB-FireflyAlphaSecStage]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	!MODEL{}
+	MODEL
+	{
+		model = EDBMods/Parts/SmallRockets/FireflyAlphaSecStage
+		scale = 1,1,1
+	}
+	
+	@scale = 1.0
+	
+	@mass = 0.759
+	
+	!RESOURCE[LiquidFuel]
+	{
+	}
+	!RESOURCE[Oxidizer]
+	{
+	}
+	
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 6760.0
+		type = Default
+		basemass = -1
+		TANK
+		{
+			name = Kerosene
+			amount = 2284.88
+			maxAmount = 2284.88
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 4475.12
+			maxAmount = 4475.12
+		}
+	}
+	
+}
