--- a/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/TU-SmallRockets.cfg
@@ -1177,3 +1177,239 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
+KSP_MODEL_SHADER
+{
+	name = EDB-FireflyAlphaSecStage
+	model = EDBMods/Parts/SmallRockets/FireflyAlphaSecStage
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = SecondStage
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.4  // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.4   // 1>less blurry 0>more blurry
+		}
+	}
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = SecondStageMetal
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-FireflyAlphaInter
+	model = EDBMods/Parts/SmallRockets/FireflyAlphaInter
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = Interstage
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.4   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.4   // 1>less blurry 0>more blurry
+		}
+	}
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = InterstageMetal
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-FireflyAlphaFS
+	model = EDBMods/Parts/SmallRockets/FireflyAlphaFS
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = FirstStage
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.4   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.4   // 1>less blurry 0>more blurry
+		}
+	}
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = FirstStageMetal
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-FireflyAlphaFairing
+	model = EDBMods/Parts/SmallRockets/FireflyAlphaFairing
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-ReaverI
+	model = EDBMods/Parts/SmallRockets/ReaverI
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.7   // 1>less blurry 0>more blurry
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = EDB-LightningI
+	model = EDBMods/Parts/SmallRockets/LightningI
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = Lightning
+		mesh = LightningMetal
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.7   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.6   // 1>less blurry 0>more blurry
+		}
+	}
+	TEXTURE
+    {
+        shader = SSTU/PBR/Metallic
+		mesh = LightningBlack
+        PROPERTY
+		{
+			name = _Color
+			color = 1.0,1.0,1.0   //higher numbers are lighter
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.4   // 0>less metallic 1>more metallic(mirror finish)
+		}
+		PROPERTY
+			{
+			name = _Smoothness
+			float = 0.4   // 1>less blurry 0>more blurry
+		}
+	}
+}
