Added Whip Antenna

--- a/EDBMods/Parts/SmallRockets/RO-CubeSats.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-CubeSats.cfg
@@ -196,3 +196,30 @@
 	
 	
 }
+
+@PART[EDB-WhipAntenna]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = True
+	
+	
+    @mass = 0.005
+    @crashTolerance = 8
+    %breakingForce = 250
+    %breakingTorque = 250
+    %fuelCrossFeed = False
+    @maxTemp = 673.15
+    %skinMaxTemp = 773.15
+
+    @MODULE[ModuleDataTransmitter]
+    {
+        @antennaType = DIRECT
+        @antennaCombinable = True
+        %antennaCombinableExponent = 2.0
+        @antennaPower = 400
+        @packetInterval = 1.0
+        @packetSize = 1.0
+        @packetResourceCost = 0.004
+    }
+	
+	
+}
