Fix Aether Engine config

--- a/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
+++ b/EDBMods/Parts/SmallRockets/RO-SmallRockets.cfg
@@ -2986,7 +2986,7 @@
 		configuration = Aether
 		CONFIG
 		{
-			name = Aeon
+			name = Aether
 			minThrust = 3.2917
 			maxThrust = 3.2917
 			heatProduction = 160
